# qualitative-app

./: README.md  main.py  pyproject.toml
qualitative_app/: main.py
qualitative_app/models/: project.py
qualitative_app/routes/api_v1/: projects.py
routes/api_v1/: __init__.py
