[tool.poetry]
name = "qualitative-app"
version = "0.1.0"
description = ""
authors = ["Alex Curtis <jacurtis@hey.com>"]
readme = "README.md"
packages = [{include = "qualitative_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
